manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myapp-route
spec:
  to:
    kind: Service
    name: myapp-svc
  port:
    targetPort: 5000
  tls:
    termination: edge
